--- a/UserLibrary.storyboard
+++ b/UserLibrary.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -133,8 +132,6 @@
                         <outlet property="collectionView" destination="4FP-q5-N0u" id="crb-4T-mdm"/>
                         <outlet property="emptyMsgLabel" destination="cSD-jg-Jo9" id="rs7-xD-s3F"/>
                         <outlet property="emptyMsgUrl" destination="aBC-U8-BuL" id="V7F-by-XOW"/>
-                        <outlet property="label" destination="DiW-ZV-O5a" id="0lB-wx-Zrh"/>
-                        <outlet property="progressView" destination="Qcs-hp-oAO" id="21P-mh-au2"/>
                         <outlet property="updatingLabel" destination="pJx-fz-3rH" id="lD0-VH-xNd"/>
                         <outlet property="updatingSpinner" destination="guE-Ti-g2m" id="hAX-b8-pxd"/>
                     </connections>
