--- a/UserForm.storyboard
+++ b/UserForm.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yud-dK-GwM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yud-dK-GwM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,12 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="eWh-0B-4GC">
-                                <rect key="frame" x="0.0" y="39" width="600" height="580"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="eWh-0B-4GC">
+                                <rect key="frame" x="0.0" y="64" width="600" height="478"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="labelCell" rowHeight="35" id="E9Q-aC-Tzj">
-                                        <rect key="frame" x="0.0" y="86" width="600" height="35"/>
+                                        <rect key="frame" x="0.0" y="65" width="600" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E9Q-aC-Tzj" id="y15-X1-Qqx">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="34"/>
@@ -39,9 +39,10 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.87581290285451197" green="0.87581290285451197" blue="0.87581290285451197" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="titleCell" id="bxP-4h-QdD" customClass="GFTitleCell">
-                                        <rect key="frame" x="0.0" y="121" width="600" height="70"/>
+                                        <rect key="frame" x="0.0" y="100" width="600" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bxP-4h-QdD" id="uF9-AK-ZlS">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="69"/>
@@ -64,7 +65,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="keywordLabelCell" rowHeight="38" id="I5p-mH-zuu" customClass="GFKeywordCell">
-                                        <rect key="frame" x="0.0" y="191" width="600" height="38"/>
+                                        <rect key="frame" x="0.0" y="170" width="600" height="38"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="I5p-mH-zuu" id="Yo6-VQ-Wmu">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="37"/>
@@ -89,7 +90,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="keywordCell" id="wQl-C1-qjm" customClass="GFKeywordEntryCell">
-                                        <rect key="frame" x="0.0" y="229" width="600" height="70"/>
+                                        <rect key="frame" x="0.0" y="208" width="600" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wQl-C1-qjm" id="jnk-Fu-17w">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="69"/>
@@ -112,7 +113,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="emptyCell" rowHeight="141" id="j1p-BE-Lhr">
-                                        <rect key="frame" x="0.0" y="299" width="600" height="141"/>
+                                        <rect key="frame" x="0.0" y="278" width="600" height="141"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j1p-BE-Lhr" id="8lH-UZ-QOm">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="140"/>
@@ -150,11 +151,11 @@
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="QlS-Cp-LTf" secondAttribute="trailing" constant="-20" id="7n4-xU-6Gp"/>
                             <constraint firstItem="QlS-Cp-LTf" firstAttribute="leading" secondItem="jGN-MW-ZDN" secondAttribute="leadingMargin" constant="-20" id="Dak-ZC-VM2"/>
-                            <constraint firstItem="eWh-0B-4GC" firstAttribute="top" secondItem="jGN-MW-ZDN" secondAttribute="topMargin" constant="20" id="FiX-Z2-mQr"/>
                             <constraint firstItem="8FM-78-kS1" firstAttribute="top" secondItem="QlS-Cp-LTf" secondAttribute="bottom" id="HUx-pc-Qgq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eWh-0B-4GC" secondAttribute="trailing" constant="-20" id="K1S-bU-hPM"/>
                             <constraint firstItem="eWh-0B-4GC" firstAttribute="leading" secondItem="jGN-MW-ZDN" secondAttribute="leadingMargin" constant="-20" id="Oh2-1t-y2w"/>
-                            <constraint firstItem="8FM-78-kS1" firstAttribute="top" secondItem="eWh-0B-4GC" secondAttribute="bottom" id="zNd-uQ-6zh"/>
+                            <constraint firstItem="eWh-0B-4GC" firstAttribute="top" secondItem="gPO-UF-vsj" secondAttribute="bottom" id="PMP-UA-nyg"/>
+                            <constraint firstItem="8FM-78-kS1" firstAttribute="top" secondItem="eWh-0B-4GC" secondAttribute="bottom" constant="58" id="vCn-iw-e2i"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="pre-ic-NLO">
@@ -171,6 +172,8 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="label" destination="Aej-ij-rH1" id="51B-4Q-zZD"/>
+                        <outlet property="progressView" destination="yQ2-5M-pDb" id="ddc-b1-GCU"/>
                         <outlet property="tableView" destination="eWh-0B-4GC" id="MMb-Kh-IX5"/>
                     </connections>
                 </viewController>
