--- a/UserLibrary.storyboard
+++ b/UserLibrary.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -73,20 +73,20 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ae-Gi-H1N">
                                 <rect key="frame" x="0.0" y="477" width="600" height="59"/>
                                 <subviews>
-                                    <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Qcs-hp-oAO">
-                                        <rect key="frame" x="8" y="41" width="150" height="2"/>
-                                        <color key="progressTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </progressView>
-                                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="uploading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiW-ZV-O5a">
-                                        <rect key="frame" x="8" y="17" width="87" height="16"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdx-uZ-qZf">
+                                        <rect key="frame" x="484" y="15" width="108" height="30"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onPhotoClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="heg-K3-drL"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="59" id="7kS-Kj-zuY"/>
+                                    <constraint firstAttribute="trailing" secondItem="hdx-uZ-qZf" secondAttribute="trailing" constant="8" id="qGw-cm-l62"/>
                                 </constraints>
                             </view>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBC-U8-BuL">
@@ -132,6 +132,7 @@
                         <outlet property="collectionView" destination="4FP-q5-N0u" id="crb-4T-mdm"/>
                         <outlet property="emptyMsgLabel" destination="cSD-jg-Jo9" id="rs7-xD-s3F"/>
                         <outlet property="emptyMsgUrl" destination="aBC-U8-BuL" id="V7F-by-XOW"/>
+                        <outlet property="startNewFormButton" destination="hdx-uZ-qZf" id="U3p-f2-P3d"/>
                         <outlet property="updatingLabel" destination="pJx-fz-3rH" id="lD0-VH-xNd"/>
                         <outlet property="updatingSpinner" destination="guE-Ti-g2m" id="hAX-b8-pxd"/>
                     </connections>
