--- a/UserForm.storyboard
+++ b/UserForm.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yud-dK-GwM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yud-dK-GwM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,8 +17,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="eWh-0B-4GC">
-                                <rect key="frame" x="0.0" y="64" width="600" height="478"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QlS-Cp-LTf">
+                                <rect key="frame" x="0.0" y="541" width="600" height="59"/>
+                                <subviews>
+                                    <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="yQ2-5M-pDb">
+                                        <rect key="frame" x="8" y="41" width="150" height="2"/>
+                                        <color key="progressTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </progressView>
+                                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="uploading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aej-ij-rH1">
+                                        <rect key="frame" x="8" y="17" width="87" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="zPV-Yz-z6h"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="eWh-0B-4GC">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="478"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="labelCell" rowHeight="35" id="E9Q-aC-Tzj">
@@ -28,16 +47,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="34"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="UWo_[ImAgE]_wsS_KJX_[G].png" translatesAutoresizingMaskIntoConstraints="NO" id="T0b-59-T5H">
-                                                    <rect key="frame" x="68" y="5" width="34" height="23"/>
-                                                </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Placemark Details" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GE7-ht-0KV">
-                                                    <rect key="frame" x="110" y="6" width="143" height="21"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Placemark Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GE7-ht-0KV">
+                                                    <rect key="frame" x="157" y="6" width="286" height="21"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="GE7-ht-0KV" firstAttribute="centerX" secondItem="y15-X1-Qqx" secondAttribute="centerX" id="gxo-i9-JCO"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.87581290285451197" green="0.87581290285451197" blue="0.87581290285451197" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
@@ -89,7 +108,7 @@
                                             <outlet property="value" destination="XPD-Ip-0Dw" id="JNB-JK-Opl"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="keywordCell" id="wQl-C1-qjm" customClass="GFKeywordEntryCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="keywordCell" id="wQl-C1-qjm" customClass="AttributeMultiTextFieldCell">
                                         <rect key="frame" x="0.0" y="208" width="600" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wQl-C1-qjm" id="jnk-Fu-17w">
@@ -127,25 +146,6 @@
                                     <outlet property="delegate" destination="Yud-dK-GwM" id="iqR-lM-KII"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QlS-Cp-LTf">
-                                <rect key="frame" x="0.0" y="541" width="600" height="59"/>
-                                <subviews>
-                                    <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="yQ2-5M-pDb">
-                                        <rect key="frame" x="8" y="41" width="150" height="2"/>
-                                        <color key="progressTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </progressView>
-                                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="uploading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aej-ij-rH1">
-                                        <rect key="frame" x="8" y="17" width="87" height="16"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="59" id="zPV-Yz-z6h"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -153,8 +153,8 @@
                             <constraint firstItem="QlS-Cp-LTf" firstAttribute="leading" secondItem="jGN-MW-ZDN" secondAttribute="leadingMargin" constant="-20" id="Dak-ZC-VM2"/>
                             <constraint firstItem="8FM-78-kS1" firstAttribute="top" secondItem="QlS-Cp-LTf" secondAttribute="bottom" id="HUx-pc-Qgq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eWh-0B-4GC" secondAttribute="trailing" constant="-20" id="K1S-bU-hPM"/>
+                            <constraint firstItem="eWh-0B-4GC" firstAttribute="top" secondItem="gPO-UF-vsj" secondAttribute="bottom" id="MZW-oV-prn"/>
                             <constraint firstItem="eWh-0B-4GC" firstAttribute="leading" secondItem="jGN-MW-ZDN" secondAttribute="leadingMargin" constant="-20" id="Oh2-1t-y2w"/>
-                            <constraint firstItem="eWh-0B-4GC" firstAttribute="top" secondItem="gPO-UF-vsj" secondAttribute="bottom" id="PMP-UA-nyg"/>
                             <constraint firstItem="8FM-78-kS1" firstAttribute="top" secondItem="eWh-0B-4GC" secondAttribute="bottom" constant="58" id="vCn-iw-e2i"/>
                         </constraints>
                     </view>
@@ -182,7 +182,4 @@
             <point key="canvasLocation" x="1371" y="103"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="UWo_[ImAgE]_wsS_KJX_[G].png" width="100" height="100"/>
-    </resources>
 </document>
